--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/vue3-minesweeper/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.5bb53cc3.js"></script>
-    <link rel="stylesheet" href="/assets/index.9a613afb.css">
+    <script type="module" crossorigin src="/vue3-minesweeper/assets/index.5bb53cc3.js"></script>
+    <link rel="stylesheet" href="/vue3-minesweeper/assets/index.9a613afb.css">
   </head>
   <body>
     <div id="app"></div>
