--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/vue3-minesweeper/assets/index.9a613afb.css">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app"1</div>
     
   </body>
 </html>
